1. Fixed Round Result Messages Bug: Both players saw "Round Lost" even when one won. Fix: Added roundWinner field to game state in game.js:382,392 UI now checks gameState.roundWinner === this.game.playerNumber for accurate results Each player sees the correct "Round Won!" or "Round Lost" message 2. Added Sound Effects New File: sounds.js - Web Audio API sound effects system Sound Effects Created: Move - Soft descending swoosh (400Hz → 200Hz) Attack - Sharp strike with sawtooth wave (800Hz → 400Hz) Parry - Metallic clang with dual tones (600Hz + 800Hz) Hit - Low impact thump (150Hz → 50Hz) Victory - Triumphant major chord (C-E-G progression) Defeat - Descending tone (400Hz → 200Hz)

--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!--
-Version: 4.0
-Latest changes: Reduced piste from 23 to 19 spaces, removed Advance and Attack feature
+Version: 5.0
+Latest changes: Added sounds.js for Web Audio sound effects
 -->
 <!DOCTYPE html>
 <html lang="en">
@@ -141,6 +141,7 @@ Latest changes: Reduced piste from 23 to 19 spaces, removed Advance and Attack f
 
     <!-- Game Scripts -->
     <script src="firebase-config.js"></script>
+    <script src="sounds.js"></script>
     <script src="game.js"></script>
     <script src="ui.js"></script>
     <script src="main.js"></script>
